Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-130116

Broken accessibility tree in (at least) certain lists

XMLWordPrintable

    • Linux/Wayland, Linux/X11
    • 54310af8f (dev), d0fb32378 (6.9), 2ececf66b (6.8)

      Steps to reproduce:

      1. Launch the attached AT-SPI accessible-event listener in a terminal
      2. Launch systemsettings
      3. Arrow up and down in the list of settings categories on the left ("Mouse & Touchpad, Keyboard, Touchscreen, etc., etc.)

      Expected results: The listener would print out the ancestry of the newly-focused/selected list item without any errors.

      Actual results: The listener prints out the ancestry of the newly-focused/selected list item and reports an error.

      Example output:

      Focused: Keyboard list item
      Ancestor:  list
      Ancestor:  panel
      Ancestor:  page tab
      Ancestor:  layered pane
      Ancestor:  filler
      ERROR: Could not ascend accessibility tree to application{}

      Impact: The Orca screen reader has quite a bit of logic in which decisions are made and/or its internal state is updated based on whether or not an accessible object is in the currrent/active window. In order to determine the window of an object, Orca ascends the accessibility tree until it gets to the window. This bug breaks that logic.

      Orca already has a number of workarounds for this situation. And it looks like I (the Orca maintainer) am about to add another one. If this bug can be fixed on the Qt side, Orca's presentation of Qt apps will be more reliable, consistent, and performant.

      Thanks in advance!

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mhqanbari MohammadHossein Qanbari
            joanmarie Joanmarie Diggs
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes